# Plague-Survivors

./: .gitignore  .gitmodules  CMakeLists.txt  setup.py
assets/scripts/: app.flecs  gameScene.flecs  mainMenu.flecs  sandbox.flecs
assets/shaders/src/: shader.frag.hlsl  shader.vert.hlsl  shader_batch.vert.hlsl  sprite.frag.hlsl  sprite_batch.vert.hlsl  text.frag.hlsl  text.vert.hlsl  text_sdf.frag.hlsl
src/: application.cpp  application.h  font.cpp  font.h  main.cpp  physicsController.cpp  physicsController.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  texture.cpp  texture.h
src/core/: componentBase.cpp  componentBase.h  componentHolder.cpp  componentHolder.h  gameObject.cpp  gameObject.h  relationshipHolder.cpp  relationshipHolder.h  sceneBase.h  sceneController.cpp  sceneController.h
src/ecsModule/: common.h  ecsController.cpp  ecsController.h  types.h  utils.cpp  utils.h
src/ecsModule/appModule/: module.cpp  module.h
src/ecsModule/assetModule/: module.cpp  module.h
src/ecsModule/cameraModule/: module.cpp  module.h
src/ecsModule/components/: boxColliderComponent.h  cameraComponent.h  dashComponent.h  inputComponent.h  physicsComponent.h  playerComponent.h  rendererComponent.h  rigidbodyComponent.h  spriteComponent.h  stateComponent.h  timeComponent.h  transformComponent.h  velocityComponent.h
src/ecsModule/components/ui/: buttonBundle.h  imageComponent.h  interactionComponent.h  nodeBundle.h  nodeComponent.h  styleComponent.h  textBundle.h
src/ecsModule/inputModule/: module.cpp  module.h
src/ecsModule/meshModule/: module.cpp  module.h
src/ecsModule/physicsModule/: module.cpp  module.h
src/ecsModule/playerModule/: module.cpp  module.h
src/ecsModule/renderModule/: module.cpp  module.h
src/ecsModule/sceneModule/: module.cpp  module.h
src/ecsModule/spriteModule/: module.cpp  module.h
src/ecsModule/systems/: cameraSystem.cpp  cameraSystem.h  inputSystem.cpp  inputSystem.h  physicsSystem.cpp  physicsSystem.h  renderSystem.cpp  renderSystem.h  timeSystem.cpp  timeSystem.h
src/ecsModule/systems/ui/: uiSystem.cpp  uiSystem.h
src/ecsModule/textModule/: module.cpp  module.h
src/ecsModule/timeModule/: module.cpp  module.h
src/ecsModule/transformModule/: module.cpp  module.h
src/ecsModule/tweenModule/: module.cpp  module.h
src/ecsModule/uiModule/: module.cpp  module.h
src/utils/: instanceBase.h  sdl.cpp  sdl.h
utils/: compile_shaders.py
